
	* Removed reference to argonms.game in GameCenterPacketProcessor.
	* Fixed disbandment of party when a member is offline.
	* Fixed mastery sometimes causing error 5 to other players in map (and
	giving wrong color based on skill level).
	* Fixed mob item drops can be leeched by anyone. Still need a solution for
	reactor drops.

2012-05-12  GoldenKevin  (revision 84)

	* New method for distributing mob EXP. This finally refactors that huge,
	ugly Mob.giveExp method into more manageable chunks. If a party attacks a
	mob and that mob has another attacker outside the party, the distribution
	makes a bit more sense (before, the party would get the mob's full EXP
	instead of only a share based on how much damage it did). It is somewhat
	more object oriented now, although not as much as I would have liked.
	* Autoban detects when client wants to control a mob that it did not aggro.

2012-05-20  GoldenKevin  (revision 85)

	* Fixed game server not removing party when last online member logs off
	* Fixed expelled party member or leaver remaining in party list if he was
	the last online member and another member logged on before he was saved to
	the database
	* Disabled banning system for now until I find a better solution to detect
	excessive amounts of suspicious activity that could be from packet editing

2012-06-09  GoldenKevin  (revision 86)

	* Fixed party EXP bug where you got 5% bonus EXP for being in a party of one

2012-06-20  GoldenKevin  (revision 87)

	* SocketChannel should already be closed before CloseListener.closed is
	called, so there is no need to cancel the associated SelectionKey.
	* Synchronize closing of a socket channel (which in turn closes its
	associated selection key) with any operations that require the key be valid,
	to avoid several race conditions.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.